--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ckeditor/ckeditor5-editor-classic": "^18.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^18.0.0",
     "@ckeditor/ckeditor5-essentials": "^18.0.0",
+    "@ckeditor/ckeditor5-font": "^18.0.0",
     "@ckeditor/ckeditor5-heading": "^18.0.0",
     "@ckeditor/ckeditor5-image": "^18.0.0",
     "@ckeditor/ckeditor5-indent": "^18.0.0",
@@ -95,5 +96,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^18.0.0"
   }
 }
