--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
+  "name": "@gecharita/ckeditor5-build-classic",
   "version": "18.0.0",
-  "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
+  "description": "Super Build: CKEditor 5 classic & inline with extra plugins",
   "keywords": [
     "ckeditor5-build",
     "ckeditor",
@@ -72,7 +72,7 @@
   "bugs": "https://github.com/ckeditor/ckeditor5/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5-build-classic.git"
+    "url": "https://github.com/gecharita/ckeditor5-build-classic.git"
   },
   "scripts": {
     "build": "webpack --mode production",
