--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gecharita/ckeditor5-super-build",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Super Build: CKEditor 5 classic & inline with extra plugins",
   "keywords": [
     "ckeditor5-build",
@@ -98,6 +98,7 @@
     }
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^18.0.0"
+    "@ckeditor/ckeditor5-alignment": "^18.0.0",
+    "@ckeditor/ckeditor5-mention": "^18.0.0"
   }
 }
