--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gecharita/ckeditor5-super-build",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Super Build: CKEditor 5 classic & inline with extra plugins",
   "keywords": [
     "ckeditor5-build",
@@ -49,6 +49,7 @@
     "@ckeditor/ckeditor5-table": "^18.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^18.0.0",
     "@ckeditor/ckeditor5-typing": "^18.0.0",
+    "@ckeditor/ckeditor5-upload": "^18.0.0",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^2.0.0",
     "husky": "^1.3.1",
